Modified html and css files

--- a/surveyForm.html
+++ b/surveyForm.html
@@ -18,7 +18,7 @@
       <fieldset>
         <label>Which option best describes your current role?
           <select>
-            <option>Select current role</option>
+            <option selected disabled>Select current role</option>
             <option>Student</option>
             <option>Full Time Job</option>
             <option>Full Time Learner</option>
@@ -38,7 +38,7 @@
       <fieldset>
         <label>What is your favorite feature of freeCodeCamp?
           <select id="dropdown">
-            <option>Select an option</option>
+            <option selected disabled>Select an option</option>
             <option>Challenges</option>
             <option>Projects</option>
             <option>Community</option>
