Added 'submit' id

--- a/surveyForm.html
+++ b/surveyForm.html
@@ -68,6 +68,6 @@
         </label>
       </fieldset>
         
-      <input type="submit">
+      <input id="submit" type="submit">
     </form>
   </body>
